2000-09-25  Joseph S. Myers  <jsm28@cam.ac.uk>

	* battlestar/extern.h: Add AUXVERB.
	* battlestar/words.c (wlist): Use AUXVERB for "climb", "move" and
	"make".
	* battlestar/cypher.c (cypher): Object to words in the place for a
	verb that aren't a VERB or KNIFE.  Allow for AUXVERBs.
	* battlestar/com2.c (put), battlestar/com4.c (take): When creating
	new verbs from "put on", "put down" and "take off", make their
	type be VERB.
	Partly from Paul Janzen <pjanzen@foatdi.harvard.edu>.
	* tests/battlestar.out3: Update.
	* tests/battlestar.in42, tests/battlestar.out42,
	tests/battlestar.in43, tests/battlestar.out43: New tests.
	* tests/battlestar.test: Update.

	* battlestar/extern.h: Add flags OBJ_PERSON and OBJ_NONOBJ.
	* battlestar/globals.c (objflags): Use them.

	* battlestar/extern.h: Define new macros for handling "a" versus
	"an" and "is" versus "are" wording issues.
	* battlestar/globals.c (objflags): Add OBJ_AN flags; reformat.
	From OpenBSD.
	* battlestar/com2.c (wearit, murder), battlestar/com4.c (take,
	eat): Use these macros.
	* tests/battlestar.in41, tests/battlestar.out41: New test.
	* tests/battlestar.test: Update.

	* battlestar/cypher.c (cypher): Remove excess blank lines.  From
	OpenBSD.

	* battlestar/com5.c (love): Fix loving already loved goddess;
	avoid fallthrough after loving goddess; give error on "love
	amulet".  From OpenBSD.
	* tests/battlestar.in40, tests/battlestar.out40: New test.
	* tests/battlestar.test: Update.

	* atc/atc.6.in, hack/Makefile.bsd: Update from NetBSD CVS.
	* battlestar/battlestar.c, battlestar/com1.c, battlestar/com2.c,
	battlestar/com3.c, battlestar/com4.c, battlestar/com5.c,
	battlestar/com6.c, battlestar/com7.c, battlestar/cypher.c,
	battlestar/dayfile.c, battlestar/extern.h, battlestar/fly.c,
	battlestar/getcom.c, battlestar/globals.c, battlestar/nightfile.c,
	battlestar/parse.c, battlestar/room.c, battlestar/words.c: Update
	from NetBSD CVS after merge.
